[package]
name = "stratumm"
version = "0.1.0"
edition = "2021"
path = "src/main.rs"
authors = ["dotslashCosmic"]
description = "IPv4/6 NTP-Amplification Attack Tool"
homepage = "https://github.com/dotslashCosmic"
build = "build.rs"

[build-dependencies]
embed-resource = "2.0"

[dependencies]
clap = { version = "4.5.4", features = ["derive"], optional = true }
colored = "2.1.0"
figlet-rs = "0.1.0"
pnet = "0.34.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
anyhow = "1.0.82"
nix = "0.28.0"
rfd = "0.8.0"
tokio = { version = "1.37.0", features = ["full"] }
eframe = "0.27.2"
egui = "0.27.2"
native-dialog = "0.7.0"
crossbeam-channel = "0.5.12"
chrono = "0.4.38"
once_cell = "1.19.0"
rand = "0.8"